# Sky_home_19_2

./: .env.sample  .gitignore  data.json  groups.json  pyproject.toml  readme.md
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_product_manufactured_at.py  0003_version.py  0005_alter_product_options_product_is_published.py
catalog/templates/: base.html  contacts.html  products_details.html  products_list.html
catalog/templates/catalog/: base.html  category_list.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_details.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: reset_password.html  user_form.html
